testsuite/tests/typecheck/should_fail/tcfail215.stderr

tcfail215.hs:8:15: error:
    • Expected a boxed type, but ‘Int#’ has representation ‘IntRep’
    • In the type signature: foo :: (?x :: Int#) => Int
